added captcha in edit form
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/direct_mail_subscription/trunk@43362 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/pi/fe_admin_dmailsubscrip.tmpl
+++ b/pi/fe_admin_dmailsubscrip.tmpl
@@ -215,32 +215,14 @@ You're now subscribed to our newsletter. An email has been sent to your email ad
 <BR>
 
 
-
-
-
-
-<br>
-<b>Select Special Categories:</b><BR>
-<table>
-<tr>
-	<td>###GW2B###Food###GW2E###</td><td><input type="checkbox" name="FE[tt_address][module_sys_dmail_category][0]"></td>
-</tr>
-<tr>
-	<td>###GW2B###Books###GW2E###</td><td><input type="checkbox" name="FE[tt_address][module_sys_dmail_category][1]"></td>
-</tr>
-<tr>
-	<td>###GW2B###Sport###GW2E###</td><td><input type="checkbox" name="FE[tt_address][module_sys_dmail_category][2]"></td>
-</tr>
-<tr>
-	<td>###GW2B###Religion###GW2E###</td><td><input type="checkbox" name="FE[tt_address][module_sys_dmail_category][3]"></td>
-</tr>
-</table>
+###CE_CATLIST###
 
 <BR>
 <b>HTML emails?</b><BR>
 <input type="checkbox" name="FE[tt_address][module_sys_dmail_html]" value=1>
 <BR>
 
+###CAPTCHA###
 
 
 	###HIDDENFIELDS###
