Ticket #13264: moved typoscript to static template
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/direct_mail_subscription/trunk@52790 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/pi/fe_admin_dmailsubscrip.tmpl
+++ b/pi/fe_admin_dmailsubscrip.tmpl
@@ -593,7 +593,7 @@ You can use the newly created record as markers on the format ###FIELD_[fieldnam
 <!--###SUB_RECORD###-->
 TYPO3 Direct Mailer
 
-Dear ###FIELD_name###
+Dear ###FIELD_tx_directmailsubscription_localgender### ###FIELD_name###
 
 You're now subscribed to a TYPO3 Testsite newsletter.
 
