* #29677: fix captcha checking * compatibility to 4.6
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/direct_mail_subscription/trunk@53515 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/pi/fe_admin_dmailsubscrip.tmpl
+++ b/pi/fe_admin_dmailsubscrip.tmpl
@@ -248,7 +248,7 @@ You're now subscribed to our newsletter. An email has been sent to your email ad
 <br />
 
 ###CAPTCHA###
-
+<br />
 
 	###HIDDENFIELDS###
 	<input type="Submit" name="whatever" value="Update">
@@ -600,13 +600,13 @@ You're now subscribed to a TYPO3 Testsite newsletter.
 IMPORTANT:
 
 Before your subscriptions is fully enabled, you must click this link:
-###THIS_URL######FORM_URL###?1=1###SYS_SETFIXED_approve###
+###THIS_URL######FORM_URL###1=1###SYS_SETFIXED_approve###
 
 If you cannot accept the subscription (eg. if somebody else subscribed you!) just click this link and you're deleted from the database:
-###THIS_URL######FORM_URL######SYS_SETFIXED_DELETE###
+###THIS_URL######FORM_URL###1=1###SYS_SETFIXED_DELETE###
 
 If you wish to edit your personal data, click this link:
-###THIS_URL######FORM_URL###?cmd=edit&aC=###SYS_AUTHCODE###&rU=###FIELD_uid###
+###THIS_URL######FORM_URL###cmd=edit&aC=###SYS_AUTHCODE###&rU=###FIELD_uid###
 
 <!--###SUB_RECORD###-->
 <!-- ###EMAIL_TEMPLATE_CREATE_SAVED### end-->
