* #29677: tweaking captcha in infomail
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/direct_mail_subscription/trunk@53564 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/pi/fe_admin_dmailsubscrip.tmpl
+++ b/pi/fe_admin_dmailsubscrip.tmpl
@@ -606,7 +606,7 @@ If you cannot accept the subscription (eg. if somebody else subscribed you!) jus
 ###THIS_URL######FORM_URL###1=1###SYS_SETFIXED_DELETE###
 
 If you wish to edit your personal data, click this link:
-###THIS_URL######FORM_URL###cmd=edit&aC=###SYS_AUTHCODE###&rU=###FIELD_uid###
+###THIS_URL######FORM_URL###&cmd=edit&aC=###SYS_AUTHCODE###&rU=###FIELD_uid###
 
 <!--###SUB_RECORD###-->
 <!-- ###EMAIL_TEMPLATE_CREATE_SAVED### end-->
