* Tweaking locallang for TYPO3 < 4.6.x
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/direct_mail_subscription/trunk@53597 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/pi/fe_admin_dmailsubscrip.tmpl
+++ b/pi/fe_admin_dmailsubscrip.tmpl
@@ -650,7 +650,7 @@ Email: ###FIELD_email###
 <!--###SUB_RECORD###-->
 TYPO3 Testsite Newsletter, Admin link
 
-Dear ###FIELD_name###
+Dear ###FIELD_tx_directmailsubscription_localgender### ###FIELD_name###
 
 Click here to edit your personal data
 ###THIS_URL######FORM_URL###&cmd=edit&aC=###SYS_AUTHCODE###&rU=###FIELD_uid###
